Big change around

--- a/index.html
+++ b/index.html
@@ -14,170 +14,79 @@
 </head>
 
 <body>
-	<header>
-		<div class="container-fluid">
-			<div class="container text-center ">
-				<div class="row">
-					<div class="col-xl-12">
-						<h1 class="header">Spooky Ghosts and Ghouls</h1>
-					</div>
-					<div class="col-xl-12 col-lg-12 col-md-12">
-						<h2>Meddling Mummy</h2>
-					</div>
-
-
-				</div>
-			</div>
-			<div class="nav d-flex justify-content-center">
-				<a href="" class="navMenu ">History</a>
-				<a href="" class="navMenu">Fun facts</a>
-				<a href="" class="navMenu">Movies</a>
-				<a href="" class="navMenu">Jokes</a>
-				<a href="" class="navMenu">Wrap it!</a>
-			</div>
-		</div>
-
-	</header>
-	<section>
-		<div class="container text-center">
-			<div class="row justify-content-center">
-
-				<div class="col-8">
-					<!-- Intro / Landing -->
-					<h1>Egyptian Mummies</h1>
-					<img src="https://d3jkudlc7u70kh.cloudfront.net/weird-mummy-facts.jpg" alt="an image of a sarcophagus">
-					<p>
-						The methods of embalming, or treating the dead body, that the ancient Egyptians used is called
-						mummification.
-						Using special processes, the Egyptians removed all moisture from the body, leaving only a dried
-						form that would
-						not easily decay. It was important in their religion to preserve the dead body in as life-like a
-						manner as
-						possible. So successful were they that today we can view the mummified body of an Egyptian and
-						have a good idea
-						of what he or she looked like in life, 3000 years ago.
-					</p>
-				</div>
-			</div>
-
-		</div>
-	</section>
-	<!-- /Intro / Landing -->
-
-	<section>
-		<div class="container text-center">
-			<div class="row justify-content-center">
-
-				<div class="col-8">
-					<h2>History of Mummies</h2>
-
-					<p>
-						The Ancient Egyptians believed that when a person died they made a journey to the next world.
-						They believed that in order to live in the next world their body had to be preserved. A
-						preserved body is called a mummy. While elaborate
-						versions of this practice were only reserved for the highest levels of Egyptian society,
-						mummification was a cornerstone of Egyptian religion. After death a body begins to decompose. In
-						order to prevent a body from decomposing
-						it is necessary to deprive the tissues of moisture and oxygen. The earliest Egyptians buried
-						their dead in shallow pits in the desert. The hot, dry sand quickly removed moisture from the
-						dead body and created a natural mummy. However,
-						the Egyptians discovered that if the body was first placed in a coffin, it would not be
-						preserved. In order to ensure that the body was preserved the Ancient Egyptians began to use a
-						process called mummification to produce their
-						mummies. This involved embalming the body and then wrapping it in thin strips of linen.
-					</p>
-
-				</div>
-			</div>
-		</div>
-	</section>
-
-	
-	<!-- Movies -->
-	<section>
-		<div class="container text-center">
-			<div class="row justify-content-center">
-
-				<div class="col-8">
-                <h1>Top 5 Mummy Movies</h1>
-					<h2>5. The Mummy's Tomb (1942)</h2>
-					<img src="images_movies/img5.jpg" class="img-fluid" alt="Responsive image">
-					<h3>Director: Harold Young</h3>
-					<p>The Mummy’s Tomb is a direct sequel to The Mummy’s Hand with the same group of heroes (although
-						Wallace Ford’s character is now call Babe Hanson instead of Babe Jenson) returning for a rematch
-						with Kharis. This Universal Mummy film (the studio’s third) stands out because Lon Chaney Jr.
-						stepped into the wrapping, becoming the only actor to play Dracula (well, the Son of Dracula),
-						Frankenstein’s Monster, the Wolf Man, and the Mummy for the studio.</p>
-
-					<h2>4. The Mummy (1999)</h2>
-					<img src="images_movies/img4.jpg" class="img-fluid" alt="Responsive image">
-					<h3>Director: Stephen Sommers</h3>
-					<p>1999’s remake in name only of Universal’s original Mummy has one of the most fascinating
-						production stories in the history of monster films. When Universal first decided to remake The
-						Mummy, they turned to Clive Barker who reportedly crafted a very dark and sensual tale of time,
-						lost love, and death (and a movie I would give me left arm to see). The story goes that Barker
-						could not get on the same page as the studio and dropped out so Universal turned to George
-						Romero.</p>
-
-
-
-					<h2>3. The Mummy (1959)</h2>
-					<img src="images_movies/img3.jpg" class="img-fluid" alt="Responsive image">
-					<h3>Director: Terrence Fisher</h3>
-					<p>Moody as hell, Hammer’s first Mummy film returned the monster to greatness after the Universal
-						Mummy cycle fell in quality during the Chaney pictures. This film stars Christopher Lee as the
-						Mummy (Hammer resurrected the name Kharis for their opening Mummy salvo) and Peter Cushing as
-						his adversary, John Banning.</p>
-
-					<h2>2. Bubba Ho-Tep (2003)</h2>
-					<img src="images_movies/img2.jpg" class="img-fluid" alt="Responsive image">
-					<h3>Director: Don Coscarelli</h3>
-					<p>The most original, strangest, and oddly endearing mummy film ever made, 2003’s Bubba Ho-Tep
-						starred the man himself Bruce Campbell as an (get ready for this) aged Elvis Presley who faked
-						his own death and now lives in an East Texas rest home. Elvis must defend his home and fellow
-						elderly housemates from a soul-sucking mummy, whom Elvis dubs Bubba Ho-Tep.</p>
-
-					<h2>1. The Mummy (1932)</h2>
-					<img src="images_movies/mummykarloff.jpg" class="img-fluid" alt="Responsive image">
-					<h3>Director: Karl Freund</h3>
-					<p>
-						This mummy, the original mummy, was a tragic monster in the same vein as Frankenstein and unlike
-						most mummies that came after, Karloff’s Imhotep was no mindless beast. No, Imhotep was a magic
-						user and a thinker, an immortal creature that used guile and shadow to inflict his will. And he
-						did it all for love. He believed that the lovely Helen Grosvenor (Zita Johann) was the
-						reincarnation of his lost love Ankh-es-en-amon.
-
-						This idea of a mummy seeking his time lost love would be repeated many times in future creature
-						features but never with such tragic class as Universal original Mummy. It’s amazing that the
-						popular mummy look, the bandaged ghoul that has appeared in so many films, was inspired by a
-						scene that only lasted minutes; a precious few minutes where Karloff wore the wrappings that
-						inspired almost a century of nightmares.
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Movies -->
-
-	<footer>
-        <div class="container-fluid">
-            <div class="container">
+<header>
+    <div class="container-fluid">
+        <div class="container text-center ">
             <div class="row">
-                <div class="col-xl-4">Team 5</div>
-                <div class="row footerFont">
-                    <div class="col">Chris O'Connor</div>
-                    <p>Aleksander Voronini</p>
-                    <div class="col">Kevin</div>
-                    <div class="col">Madis</div>
-                    <div class="col">Jose Enciso</div>
-                    <div class="col">May</div>
-                    <div class="col">Nick Britz</div>
-                    <div class="col">Tracy Jhonson</div>
-                    <div class="col">Deanna Castano</div>
+                <div class="col-xl-12 col-lg-12 col-md-12">
+                    <a href="index.html">Meddling Mummy</a>
                 </div>
+
             </div>
         </div>
-    </footer>
+        <div class="nav d-flex ">
+            <a href="pages/history.html" class="navMenu ">History</a>
+            <a href="pages/funFacts.html" class="navMenu">Fun facts</a>
+            <a href="pages/movies.html" class="navMenu">Movies</a>
+            <a href="pages/jokes.html" class="navMenu">Jokes</a>
+            <a href="pages/makingOf.html" class="navMenu">Wrap it!</a>
+        </div>
+    </div>
+
+</header>
+<section>
+    <div class="container text-center">
+        <div class="row justify-content-center">
+            <div class="col-xl-12">
+                <div class="header">Spooky Ghosts and Ghouls</div>
+            </div>
+            <div class="col-8">
+                
+                <h1>Egyptian Mummies</h1>
+                <img src="https://d3jkudlc7u70kh.cloudfront.net/weird-mummy-facts.jpg" alt="an image of a sarcophagus">
+                <p>
+                    The methods of embalming, or treating the dead body, that the ancient Egyptians used is called
+                    mummification.
+                    Using special processes, the Egyptians removed all moisture from the body, leaving only a dried
+                    form that would
+                    not easily decay. It was important in their religion to preserve the dead body in as life-like a
+                    manner as
+                    possible. So successful were they that today we can view the mummified body of an Egyptian and
+                    have a good idea
+                    of what he or she looked like in life, 3000 years ago.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+	
+
+	
+
+
+<footer>
+    <div class="container-fluid">
+        <div class="container">
+        <div class="row">
+            <div class="col-xl-4">Team 5</div>
+            <div class="footerFont">
+                Chris O'Connor<br/>
+                Aleksander Voronini<br/>
+                Kevin<br/>
+                Madis<br/>
+                Jose Enciso<br/>
+                May<br/>
+                Nick Britz<br/>
+                Tracy Jhonson<br/>
+                Deanna Castano<br/>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
