--- a/pages/history.html
+++ b/pages/history.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="../style/style.css" type="text/css" />
+    <link rel="stylesheet" href="../style/style.css" type="text/css"/>
 
     <title>Document</title>
 </head>
 <body>
-
-	<header>
+    
+    	<header>
 		<div class="container-fluid">
 			<div class="container text-center ">
 				<div class="row">
@@ -30,56 +30,56 @@
                 <a href="funFacts.html" class="navMenu">Fun facts</a>
                 <a href="movies.html" class="navMenu">Movies</a>
                 <a href="jokes.html" class="navMenu">Jokes</a>
-                <a href="makingOf.html" class="navMenu">Wrap it!</a>
+                <a href="makingOf" class="navMenu">Wrap it!</a>
 			</div>
 		</div>
 
 	</header>
 
-    <!-- How to make a Mummy -->
-	<section>
+<section>
 		<div class="container text-center">
 			<div class="row justify-content-center">
+
 				<div class="col-8">
-					<h2>How to make a Mummy</h2>
-					<p>There are steps to create a mummy</p>
-					<ol>
-						<li>Insert a hook through a hole near the nose and pull out part of the brain</li>
-						<li>Make a cut on the left side of the body near the tummy</li>
-						<li>Remove all internal organs</li>
-						<li>Let the internal organs dry</li>
-						<li>Place the lungs, intestines, stomach and liver inside canopic jars</li>
-						<li>Place the heart back inside the body</li>
-						<li>Rinse inside of body with wine and spices</li>
-						<li>Cover the corpse with natron (salt) for 70 days</li>
-						<li>After 40 days stuff the body with linen or sand to give it a more human shape</li>
-						<li>After the 70 days wrap the body from head to toe in bandages</li>
-						<li>Place in a sarcophagus (a type of box like a coffin)</li>
-					</ol>
-					<p>If the person had been a Pharaoh, he would be placed inside his special burial chamber with lots
-						of treasure!</p>
-					<img src="images/embalmingtools.jpg" alt="vintage embalming tools" height="400" width="420">
-                </div>
+					<h2>History of Mummies</h2>
+
+					<p>
+						The Ancient Egyptians believed that when a person died they made a journey to the next world.
+						They believed that in order to live in the next world their body had to be preserved. A
+						preserved body is called a mummy. While elaborate
+						versions of this practice were only reserved for the highest levels of Egyptian society,
+						mummification was a cornerstone of Egyptian religion. After death a body begins to decompose. In
+						order to prevent a body from decomposing
+						it is necessary to deprive the tissues of moisture and oxygen. The earliest Egyptians buried
+						their dead in shallow pits in the desert. The hot, dry sand quickly removed moisture from the
+						dead body and created a natural mummy. However,
+						the Egyptians discovered that if the body was first placed in a coffin, it would not be
+						preserved. In order to ensure that the body was preserved the Ancient Egyptians began to use a
+						process called mummification to produce their
+						mummies. This involved embalming the body and then wrapping it in thin strips of linen.
+					</p>
+
 				</div>
 			</div>
+		</div>
 	</section>
-	<!-- How to make a Mummy -->
+
 
 <footer>
         <div class="container-fluid">
             <div class="container">
             <div class="row">
                 <div class="col-xl-4">Team 5</div>
-                <div class="footerFont">
-                Chris O'Connor<br/>
-                Aleksander Voronini<br/>
-                Kevin<br/>
-                Madis<br/>
-                Jose Enciso<br/>
-                May<br/>
-                Nick Britz<br/>
-                Tracy Jhonson<br/>
-                Deanna Castano<br/>
+                <div class="row footerFont">
+                    <div class="col">Chris O'Connor</div>
+                    <p>Aleksander Voronini</p>
+                    <div class="col">Kevin</div>
+                    <div class="col">Madis</div>
+                    <div class="col">Jose Enciso</div>
+                    <div class="col">May</div>
+                    <div class="col">Nick Britz</div>
+                    <div class="col">Tracy Jhonson</div>
+                    <div class="col">Deanna Castano</div>
                 </div>
             </div>
         </div>
